fix cake man blurryness

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -21,7 +21,7 @@
 }
 
 .cakeman{
-  width: 40rem
+  width: 36rem
 }
 
 @media only screen and (max-width: 600px) {
